charts/factory/manuela-factory/templates/line-dashboard/line-dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: line-dashboard
  name: line-dashboard
  namespace: factory-line-dashboard
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: line-dashboard
    deploymentconfig: line-dashboard
  sessionAffinity: None
  type: ClusterIP
