charts/factory/manuela-factory/templates/line-dashboard/line-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: line-dashboard
  name: line-dashboard
  namespace: factory-line-dashboard
spec:
  subdomain: line-dashboard-factory-line-dashboard
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: line-dashboard
    weight: 100
  wildcardPolicy: None
